APPS-828 fixing AV height on small screen.
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@68274 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/scss/scientific-layout.scss
+++ b/web/src/main/resources/org/geogebra/web/resources/scss/scientific-layout.scss
@@ -2,16 +2,9 @@
 @import 'dimens';
 
 .GeoGebraFrame {
-    .smallScreenHeaderScientific {
-        height: 48px;
-        box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12), 0 3px 1px -2px rgba(0,0,0,.2);
-        position: absolute;
-        width: 100%;
-        z-index: 11; //shadow should hide three dot menu
-    }
 
     .algebraPanelScientificSmallScreen {
-        height: calc(100% - 48px);
+        height: calc(100% - 80px);
         padding-top: 8px;
         box-sizing: border-box;
     }
